--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -144,8 +144,9 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="m_openAction"/>
     <addaction name="m_addAction"/>
+    <addaction name="m_openAction"/>
+    <addaction name="m_saveAction"/>
     <addaction name="m_submitAction"/>
     <addaction name="separator"/>
     <addaction name="m_exitAction"/>
@@ -171,6 +172,11 @@
   <action name="m_exitAction">
    <property name="text">
     <string>Exit</string>
+   </property>
+  </action>
+  <action name="m_saveAction">
+   <property name="text">
+    <string>Save</string>
    </property>
   </action>
  </widget>
